package lect.AbstractFactory;

public class BlackOlives implements Veggies {

	public String toString() {
		return "Black Olives";
	}
}
