package lect.AbstractFactory;

public interface Cheese {
	public String toString();
}
