package lect.AbstractFactory;
public interface Clams {
	public String toString();
}
