package lect.AbstractFactory;
public interface Dough {
	public String toString();
}
