package lect.AbstractFactory;

public class Onion implements Veggies {

	public String toString() {
		return "Onion";
	}
}
