package lect.AbstractFactory;

public interface Pepperoni {
	public String toString();
}
