package lect.AbstractFactory;
public class RedPepper implements Veggies {

	public String toString() {
		return "Red Pepper";
	}
}
