package lect.AbstractFactory;
public interface Sauce {
	public String toString();
}
