package lect.AbstractFactory;
public class Spinach implements Veggies {

	public String toString() {
		return "Spinach";
	}
}
