package lect.AbstractFactory;

public interface Veggies {
	public String toString();
}
